# rust_svr

./: Cargo.toml  hhh
config/: config.toml
src/: main.rs
src/db/: mod.rs  model.rs  mysql.rs  redis.rs  test.rs
svr_common/: Cargo.toml
svr_common/src/: lib.rs
svr_common/src/cfg/: configure.rs  mod.rs  models.rs
svr_common/src/lock/: mod.rs
svr_common/src/trace/: mod.rs
svr_endpoint/: Cargo.toml
svr_endpoint/src/: lib.rs
svr_endpoint/src/cs/: client.rs  codec.rs  errors.rs  json.rs  mod.rs  protocol.rs  server.rs
svr_endpoint/src/cs/proto/: helloworld.rs  meta.rs  mod.rs
svr_macro/: Cargo.toml
svr_macro/src/: lib.rs
svr_proto/: Cargo.toml
svr_proto/protos/cs/: meta.proto  test.proto
svr_proto/src/: build.rs  lib.rs
