workspace = { members = [ "svr_common", "svr_endpoint","svr_macro", "svr_proto"] }
[package]
name = "rust_svr"
version = "0.1.0"
edition = "2021"

[dependencies]
svr_common={path = "svr_common"}
svr_endpoint={path = "svr_endpoint"}
svr_proto={path = "svr_proto"}
svr_macro={path = "svr_macro"}
dotenv = "0.15.0"
config = "0.13.4"
serde = "1.0.193"
serde_json = "1.0.108"
lazy_static = "1.4.0"
tokio = { version = "1.35.0",features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-appender = "0.2.3"
chrono = "0.4.31"
dashmap = "5.5.3"
sqlx = { version = "0.7.3" ,features = [ "mysql", "runtime-tokio-native-tls" ] }
redis = { version = "0.24.0",features = ["tokio-comp","json"] }
bb8-redis = "0.14.0"
bb8 = "0.8.1"
sea-orm = { version = "0.12.10",features = ["macros","sqlx-all","runtime-tokio-native-tls"] }
time = { version = "0.3.30", features = [] }
bytes = "1.5.0"
futures-util = "0.3.29"
futures = "0.3.29"
rand = "0.8.5"
async-trait = "0.1.74"
proc-macro2 = "1.0.70"
quote = { version = "1.0.33", features = [] }
syn = { version = "2.0.41", features = [] }
prost = { version = "0.12.3" }
prost-build = { version = "0.12.3", features = [] }
prost-types = { version = "0.12.3" }
[build-dependencies]
prost-build = { version = "0.12.3", features = [] }
prost-types = { version = "0.12.3" }
