[package]
name = "svr_endpoint"
version = "0.1.0"
edition = "2021"

[features]
cs=[]
default=["cs"]

[dependencies]
svr_macro={path = "../svr_macro"}
svr_common={path = "../svr_common",features = ["default"]}
tokio = { version = "1.35.1" ,features = ["full"]}
features = "0.10.0"
tokio-util = { version = "0.7.10",features = ["codec"] }
lazy_static = "1.4.0"
dashmap = "5.5.3"
futures-util = { version = "0.3.29",features = ["default","sink"] }
bytes = "1.5.0"
serde_json = "1.0.108"
rand = "0.8.5"
serde = "1.0.193"
log = "0.4.20"
tracing = "0.1.40"
async-trait = "0.1.75"
prost = "0.12.3"
time = "0.3.30"
