[lib]
proc-macro=true
[package]
name = "svr_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.70"
quote = { version = "1.0.33", features = ["default"] }
syn = { version = "2.0.41", features = ["full"] }
prost = "0.12.3"